14-09-2005 Qball <Qball@qballcow.nl>
	* src/tray-icon.c:		Added libnotify support (exp.)
	* src/main.c:			Added libnotify init
	* contifure.ac:			Added libnotify compile option
	(--enable-notify)
11-09-2005 Qball <Qball@qballcow.nl>
	* po/POTFILES.in:		fixed entries, so make dist works. 

09-08-2005 Qball <Qball@qballcow.nl>
	* src/pl3_custom_stream.c|h:	Moving some code.
	* src/strfsong.c:		Changed strncmp to memcmp
	(:%s/strncmp/memcmp) does this help? profiler shows some gain.

06-08-2005 Qball <Qball@qballcow.nl>
	* src/playlist3.c/main.c:	Row highlight when playing now also
	changes the icon.
	* src/preferences.c:		Remove functions that depend on
	gtk+-2.6 or higher
	* src/preferences.c:		All combo boxes are reset when
	selecting another entry. so the "formula" will always match
	* src/playlist3.c:		Fixed spelling + marked string for
	translation
	* src/playlist3.c:		Possibility to overwrite playlists.
	(with warning)
	* src/preferences.c:		Set connection timeout real-time.
	* src/main.c:			Custom quit function.  (to stop segf.
	on program exit)
	* glade/gmpc.glade:		call custom quit function.
	* src/player.c:			call custom quit function.

	
16-07-2005 Qball <Qball@qballcow.nl>
	* configure.ac:			Depend on libmpd-0.01
	* src/libmpd.[c|h]:		removed
	* src/libmpdclient.[c|h]:	removed
	* src/debug_printf.[c|h]:	removed
	* pixmap/media-playlist.png:	Added
	* moved used images to svg:	?

10-07-2005 Qball <Qball@qballcow.nl>
	* configure.ac:			--disable-gnome-vfs will remove the
	gnome-vfs dependency of gmpc.
	* glade/pl3.glade:		Add button-press handler.
	* src/playlist3.c:		Fix right mouse behauviour
	* src/preferences.c:		Fix for bug: 442 
	* glade/gmpc.glade:		Fix for bug: 441
	* glade/gmpc.glade:		esc/ctrl-w now closes the pref window.
	* src/playlist3.c:		Right mouse menu contains
	"Information" when needed.


10-07-2005 Qball <Qball@qballcow.nl>
	* src/preferences.c:		If tag-browser's are changed, update
	the tree in the playlist.